--- a/content/encyclopedie-draft/m87.md
+++ b/content/encyclopedie-draft/m87.md
@@ -4,17 +4,15 @@ date = 2023-11-17T19:54:58+01:00
 draft = false
 +++
 
-\
-
-Dit is het zwaarste [sterrenstelsel](sterrenstelsel.html){.two} dat we
+---
+Dit is het zwaarste [sterrenstelsel](/encyclopedie/sterrenstelsel) dat we
 kennen. Het is in maart 1781 ontdekt door de Franse kometenjager
 *Charles Messier*. Hij kreeg in de catalogus die door deze Fransman is
 samengesteld nummer 87. In de *New General Catalogue*, een veel
 uitgebreidere catalogus over nevelachtige objecten is M 87 bekend als
 NGC 4486.
 
-De schijnbare helderheid van het stelsel bedraagt [magnitude\
-](magnitud.html){.two}9,2. Daarmee is het het grootste en tevens
+De schijnbare helderheid van het stelsel bedraagt [magnitude](/encyclopedie/magnitude){.two}9,2. Daarmee is het het grootste en tevens
 helderste sterren stelsel van de Virgo-cluster. Dat is een groep van
 enkele duizenden sterrenstelsels in het sterrenbeeld Maagd.
 
@@ -31,12 +29,12 @@ is zeer compact en heeft een middellijn van minder dan drie
 lichtmaanden! Het stelsel is bovendien een van de helderste
 röntgenbronnen (3C274). De schattingen van zijn massa lopen uiteen van
 een biljoen tot honderd biljoen (duizendmiljard tot
-honderdduizendmiljard) zonsmassa\'s! Uit de kern stroomt een straal van
+honderdduizendmiljard) zonsmassa's! Uit de kern stroomt een straal van
 intens blauw licht met een lengte van 100.000 lichtjaar. Deze «jet»
 bevat evenveel materie als een miljoen zonnen. M 87 wordt omringd door
-duizenden [bolvormige sterrenhopen](bolvormi.html){.two}.
+duizenden [bolvormige sterrenhopen](/encyclopedie/bolvormig).
 
-Recente foto\'s die door de [Hubble Space Telescope](hst.html){.two} van
+Recente foto's die door de [Hubble Space Telescope](/encyclopedie/hstl) van
 de kern van M 87 zijn gemaakt, tonen volgens de astronoom Holland Ford
 van het Space Telescope Science Institute, bijna zeker aan dat zich daar
 een geweldig groot [zwart gat\
@@ -57,7 +55,7 @@ snelheidsmetingen aan de schijfvormige, ongeveer 500 licht jaar grote
 draaikolk van heet gas die om het centrum van M 87 draait. Het gas heeft
 een temperatuur van ongeveer 10.000 graden en bestaat voornamelijk uit
 geïoniseerde waterstof (dat is waterstof waarvan de
-[atomen](atomen.html){.two} een elektron hebben ver loren). Met de Faint
+[atomen](/encyclopedie/atomen) een elektron hebben ver loren). Met de Faint
 Object Spectrograph van de ruimte telescoop werden de [blauw en
 roodverschuivingen](blauw%20en.html){.two} van het licht van de
 draaikolk gemeten. Hieruit kan rechtstreeks de rotatiesnelheid van het
@@ -78,3 +76,5 @@ sterrenstelsels». Het idee is dat de enorme hoeveelheden energie die
 deze sterrenstelsels uitstralen, ontstaan doordat een centraal zwart gat
 materie uit zijn omgeving opslokt. Hierbij wordt een deel van die
 materie omgezet in straling.
+
+---
